--- a/group/templates/item_new.html
+++ b/group/templates/item_new.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-	<form action="/group/new" method="POST" accept-charset="utf-8">
+	<form action="{{post_url}}" method="POST" accept-charset="utf-8">
 		<table border="0" cellspacing="5" cellpadding="5">
 			{{ form }}
 		</table>
