--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,15 @@ body {
   background:#6DC5F7 url("/images/bg.png") repeat-x scroll;
 }
 
+#background_picture {
+	height: 672px;
+	width: 767px;
+	background:#CCFFFF url("/images/bg_1.jpg") no-repeat scroll left top;
+	position: absolute;
+	z-index: -1;
+	margin: -50px;
+}
+
 #main_panel {
 	margin: 50px auto;
 	width: 1000px;
@@ -19,4 +28,35 @@ body {
 	border-radius: 8px 8px;
 	-moz-border-radius: 8px 8px;
 	z-index: -1;
+}
+
+#menu_panel {
+	border-style: groove;
+	border-width: thin;
+	width: 100%;
+	height: 50px;
+	text-align: center;
+	vertical-align: middle;
+	font: 16px "Trebuchet MS", sans-serif;
+	background-color: #404240;
+	position: relative;
+	border-radius: 8px 8px;
+	-moz-border-radius: 8px 8px;
+}
+
+#search_box {
+	border-style: none;
+	height: 28px;
+	margin: 1px 0 0 10px;
+	float: left;
+	width: 200px;
+	font-size: 20px;
+}
+
+#search_box_panel {
+	background-color: white;
+	width: 250px;
+	height: 30px;
+	border-radius: 12px 12px;
+	-moz-border-radius: 12px 12px;
 }
