--- a/front/templates/signin.html
+++ b/front/templates/signin.html
@@ -6,11 +6,9 @@
 
 {% block content %}
 	<form action="signin" method="post" accept-charset="utf-8">
-
 		<table border="0" cellspacing="5" cellpadding="5">
-			{{ form }}
+			{{form.as_table}}
 		</table>
-		
 		<p><input type="submit" value="Continue &rarr;"></p>
 	</form>
 	 
