--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,11 @@
+{% autoescape off %}
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js" type="text/javascript"></script>
+	<script src="/js/base.js" type="text/javascript"></script>
 	<link type="text/css" href="/css/style.css" rel="stylesheet" />
 	<title>{% block title %} DaoShiCha {% endblock %}</title>
 	{% block header %} {% endblock %}
@@ -22,7 +24,10 @@
 			<div style="float: left; position: relative; margin: 20px 0 10px 50px;">
 				<span style="color: white; font-size: 12px; font-weight: bold;">
 					{% if user %}
-						Logout
+						Welcome <span style="color:yellow">({{ user.username }})</span> &nbsp;
+						<span id="logout">
+							Logout
+						</span>
 					{% else %}
 					    Login
 					{% endif %}
@@ -40,3 +45,5 @@
 	</div>
 </body>
 </html>
+
+{% endautoescape %}
