Add JSON support for db models

--- a/group/templates/topic_display.html
+++ b/group/templates/topic_display.html
@@ -7,8 +7,8 @@
 {% block content %}
 	
 	<table border="0" cellspacing="5" cellpadding="5">
-		<tr><th>Header</th></tr>
-		<tr><td>Data</td></tr>
+		<tr><th>{{ topic.title }}</th></tr>
+		<tr><td>{{ topic.content }}</td></tr>
 	</table>
 	
 {% endblock %}
