--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js" type="text/javascript"></script>
-	<script src="/js/base.js" type="text/javascript"></script>
+	<script src="/js/base.js" type="text/javascript"></script>		
+	<link type="text/css" href="/css/jquery-ui-1.8.5.custom.css" rel="stylesheet" />
 	<link type="text/css" href="/css/style.css" rel="stylesheet" />
 	<title>{% block title %} DaoShiCha {% endblock %}</title>
 	{% block header %} {% endblock %}
@@ -16,6 +17,8 @@
 	<div id="main_panel">
 		<div id="main_panel_overlay">
 		</div>
+		<div id="login" title="Login" style="display:none;">
+		</div>
 		<div id="menu_panel">
 			<div style="float:left; position: relative; margin: 10px 0 10px 25px;">
 				<span style="color: white; font-size: 20px;">join</span>
@@ -25,11 +28,13 @@
 				<span style="color: white; font-size: 12px; font-weight: bold;">
 					{% if user %}
 						Welcome <span style="color:yellow">({{ user.username }})</span> &nbsp;
-						<span id="logout">
-							Logout
+						<span id="logout_span">
+							<a href="#">Logout</a>
 						</span>
 					{% else %}
-					    Login
+					    <span id="login_span">
+							<a href="#">Login</a>
+						</span>
 					{% endif %}
 					&nbsp; &nbsp;Explore
 				</span>
