Add new base blue

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,9 @@
 			</div>
 		</div>
 		<div id="content_panel">
-			{% block content %} {% endblock %}
+			<div id="white_panel" style="background-color: #FFFFFF; margin-top: 20px; -moz-border-radius: 6px; padding: 16px;">
+				{% block content %} {% endblock %}
+			</div>
 		</div>
 	</div>
 </body>
