--- a/front/templates/signin.html
+++ b/front/templates/signin.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_blue.html" %}
 
 {% block title %}
 	注册新用户
@@ -11,5 +11,35 @@
 		</table>
 		<p><input type="submit" value="Continue &rarr;"></p>
 	</form>
-	 
+	
+	<form action="signin" method="post" accept-charset="utf-8">
+		
+		<table cellspacing="0">
+		      <tbody><tr>
+		        <th><label for="username_or_email">Username or email</label></th>
+		        <td><input type="text" value="" name="session[username_or_email]" id="username_or_email"></td>
+		      </tr>
+		      <tr>
+		        <th><label for="password">Password</label></th>
+		        <td><input type="password" value="" name="session[password]" id="password"> <small><a href="/account/resend_password">Forgot?</a></small></td>
+		      </tr>
+		      <tr>
+		        <th></th>
+		        <td><input type="checkbox" value="1" name="remember_me" id="remember_me"> <label class="inline" for="remember_me">Remember me</label></td>
+		      </tr>
+
+		      <tr>
+		        <th></th>
+		        <td><input type="submit" value="Sign In" name="commit" id="signin_submit" class="btn btn-m"></td>
+		      </tr>
+		      <tr>
+		          <th></th>
+		        <td>
+		          <p>If you’ve been using Twitter from your phone, <a href="/account/complete">click here</a> to sign up on the web.</p>
+		                  </td>
+		      </tr>
+		    </tbody></table>
+
+		<p><input type="submit" value="Continue &rarr;"></p>
+	</form>
 {% endblock %}
