--- a/front/templates/login.html
+++ b/front/templates/login.html
@@ -1,15 +1,14 @@
-{% extends "base.html" %}
+{% extends "master.html" %}
 
 {% block title %}
 	注册新用户
 {% endblock %}
 
 {% block content %}
-	<form action="{{page_url}}" method="post" accept-charset="utf-8">
-		<table border="0" cellspacing="5" cellpadding="5">
-			{{ form }}
-		</table>
 
+	<form action="{{page_url}}" method="post" accept-charset="utf-8">
+		{{ form.as_p }}
 		<p><input type="submit" value="Continue &rarr;"></p>
 	</form>
+	
 {% endblock %}
