jquery debug and resource loader plugin uploaded.

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js" type="text/javascript"></script>
+	<script src="/js/util/jquery.rloader.js" type="text/javascript"></script>
 	<script src="/js/base.js" type="text/javascript"></script>		
 	<link type="text/css" href="/css/jquery-ui-1.8.5.custom.css" rel="stylesheet" />
 	<link type="text/css" href="/css/style.css" rel="stylesheet" />
@@ -41,7 +42,7 @@
 			</div>
 			<div id="search_box_panel" style="float: right; position: relative; margin: 10px;" >
 				<input id="search_box" type="text" />
-				<img src="/images/search.png" style="margin: 3px" height="24px"></img>
+				<img src="/images/search.png" style="margin: 3px" height="24px" />
 			</div>
 		</div>
 		<div id="content_panel">
