--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,21 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js" type="text/javascript"></script>
 	<script src="/js/util/jquery.rloader.js" type="text/javascript"></script>
-	<script src="/js/base.js" type="text/javascript"></script>		
-	<link type="text/css" href="/css/jquery-ui-1.8.5.custom.css" rel="stylesheet" />
-	<link type="text/css" href="/css/style.css" rel="stylesheet" />
+	<script src="/js/loader.js" type="text/javascript"></script>
+	<script>
+		loadJavascriptFiles(
+			[
+				"/js/base.js",
+			]
+		);
+		loadCssFiles (
+			[
+				"/css/jquery-ui-1.8.5.custom.css",
+				"/css/style.css",
+			]
+		);
+	</script>
+	
 	<title>{% block title %} DaoShiCha {% endblock %}</title>
 	{% block header %} {% endblock %}
 </head>
