Fix the bug when the model is None, rename templates to signup

--- a/templates/master.html
+++ b/templates/master.html
@@ -19,6 +19,7 @@
 		}
 		#content {
 			min-height: 420px;
+			padding: 1.5em 0;
 		}
 	</style>
 </head>
@@ -28,6 +29,7 @@
 	<div id="wrapper" class="container_12">
 		<div id="header">
 			<h1 id="daoshicha">Daoshicha</h1>
+			<hr>
 		</div>
 		<div id="content">
 			{% block content %}
