--- a/front/templates/signup.html
+++ b/front/templates/signup.html
@@ -6,9 +6,9 @@
 
 {% block content %}
 
-	<form action="signin" method="post" accept-charset="utf-8">
+	<form action="signup" method="post" accept-charset="utf-8">
 		{{form.as_p }}
-		<p><input type="submit" value="Continue &rarr;"></p>
+		<p><input type="submit" value="Create my account &rarr;"></p>
 	</form>
 
 {% endblock %}
