jquery debug and resource loader plugin uploaded.

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,8 @@
 		loadJavascriptFiles(
 			[
 				"/js/base.js",
+				"/js/util/jQuery.debug.js",
+				"/js/util/queue.js",
 			]
 		);
 		loadCssFiles (
