Remove the status varible in Redirect action

--- a/front/templates/signup_successful.html
+++ b/front/templates/signup_successful.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
-	You've been recored.
+	<p class="success">Success! You've been recored.</p>
+	
 	 
 {% endblock %}
