Check guest when check permission

--- a/templates/master.html
+++ b/templates/master.html
@@ -63,7 +63,7 @@
 			<div id="top-bar-bg">
 				<div id="top-bar">
 					<div id="top-bar-inside">
-						<h1 id="daoshicha" style="margin:16px 0 16px;">Daoshicha</h1>
+						<h1 id="daoshicha" style="margin:16px 0 16px;"><strong>Daoshicha</strong>.com</h1>
 						<hr>
 					</div>
 				</div>
