--- a/group/templates/site_display.html
+++ b/group/templates/site_display.html
@@ -5,6 +5,9 @@
 {% endblock %}
 
 {% block content %}
+	<div id="group_title">
+		<h2>Latest Post</h2>
+	</div>
 	{% include "topic_list.html" %}
 {% endblock %}
 
