--- a/templates/master.html
+++ b/templates/master.html
@@ -9,51 +9,10 @@
 	<link rel="stylesheet" href="/css/sen.extra.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="/css/sen.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="/css/960.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="/css/daoshicha.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<title>{% block title %}
 		Title
 	{% endblock %}</title>
-	
-	<style type="text/css" media="screen">
-		#wrapper {
-			padding: 1.5em 10px;
-		}
-		#content {
-			min-height: 420px;
-			padding: 1.5em 0;
-			padding-top: 60px;
-		}
-		#top-bar-outer {
-		    width: 100%;
-		    height: 40px;
-		    display: block;
-/*		    text-align: center;*/
-		    position: fixed;
-		    top: 0;
-		    left: 0;
-		}
-		#top-bar-bg {
-		    width: 100%;
-		    height: 100%;
-		    top: 0;
-		    left: 0;
-		    background: white;
-		    background: -webkit-gradient(linear,left top,left bottom,from(white),to(white));
-		    background: -moz-linear-gradient(top,white,white);
-		    background: transparent\9;
-		    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFFFFF',endColorstr='#FFFFFF');
-		}
-		#top-bar {
-		  margin: 0 auto;
-		  width: 960px;
-		  text-align: left;
-		}
-		#top-bar .top-bar-inside {
-		  margin: 0 40px;
-		  position: relative;
-		  vertical-align:middle;
-		}
-		
-	</style>
 	
 	{% block html_head %}
 		
