--- a/assets/css/daoshicha.css
+++ b/assets/css/daoshicha.css
@@ -1,32 +1,32 @@
 
 
 #wrapper {
-	padding: 1.5em 10px;
+  padding: 1.5em 10px;
 }
 #content {
-	min-height: 420px;
-	padding: 1.5em 0;
-	padding-top: 60px;
+  min-height: 420px;
+  padding: 1.5em 0;
+  padding-top: 60px;
 }
 #top-bar-outer {
-    width: 100%;
-    height: 40px;
-    display: block;
-/*		    text-align: center;*/
-    position: fixed;
-    top: 0;
-    left: 0;
+  width: 100%;
+  height: 40px;
+  display: block;
+  /* text-align: center;*/
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 #top-bar-bg {
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: white;
-    background: -webkit-gradient(linear,left top,left bottom,from(white),to(white));
-    background: -moz-linear-gradient(top,white,white);
-    background: transparent\9;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFFFFF',endColorstr='#FFFFFF');
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: white;
+  background: -webkit-gradient(linear,left top,left bottom,from(white),to(white));
+  background: -moz-linear-gradient(top,white,white);
+  background: transparent\9;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFFFFF',endColorstr='#FFFFFF');
 }
 #top-bar {
   margin: 0 auto;
@@ -36,11 +36,97 @@
 #top-bar .top-bar-inside {
   margin: 0 40px;
   position: relative;
-  vertical-align:middle;
+  vertical-align: middle;
 }
 
 
-.sidebar_box{
-  border: 1px solid #EEEEEE; 
+div.sidebar_box {
+  border: 1px solid #EEEEEE;
   padding: 10px;
+  margin: 10px;
 }
+
+li.topic_list {
+  list-style: none outside none;
+  border-bottom: 1px solid #EEEEEE;
+  padding-top: 12px;
+}
+  li.topic_list:first-child{
+    border-top: 1px solid #EEEEEE;
+  }
+
+span.topic_author_photo {
+  width: 50px;
+  position: absolute;
+}
+
+span.topic_content {
+  margin-left: 56px;
+  overflow: visible;
+  min-height: 48px;
+  display: block;
+}
+
+a.a-btn {
+  zoom: 1;
+  background: #ddd url(/images/bg-btn.gif) repeat-x scroll 0 0;
+  cursor: pointer;
+  text-shadow: 1px 1px 0 #fff!important;
+  border-color: #ddd #ddd #ccc!important;
+  border-style: solid;
+  border-width: 1px!important;
+  text-decoration: none;
+  padding: 4px 8px 5px;
+  line-height: 14px;
+  font-size: 11px;
+  font-family: "lucida grande",helvetica,tahoma,arial;
+  display: inline-block;
+  _display: inline;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+}
+  a.a-btn,a.a-btn:visited {
+    color: #333!important;
+  }
+  a.a-btn:hover,a.a-btn:focus {
+    text-decoration: none;
+    border-color: #999 #999 #888!important;
+    color: #000;
+    outline: none;
+  }
+  a.a-btn:active {
+    background-image: none;
+    outline: none;
+  }
+  :focus {
+    -moz-outline-style: none;
+  }
+a.a-btn-m {
+  font-size: 12px;
+  font-family: "helvetica neue",arial,sans-serif;
+/*  padding: 5px 15px 6px;
+  line-height: 20px;*/
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  background-position: 0 -200px;
+}
+a.a-btn-l {
+  font-size: 20px;
+  line-height: 26px;
+  padding: 7px 20px 8px;
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  font-family: "helvetica neue",arial,sans-serif;
+  background-position: 0 -400px;
+}
+a.btn-disabled {
+  opacity: .6;
+  filter: alpha(opacity=60);
+  background-image: none;
+}
+
+
+
