--- a/group/templates/group_display.html
+++ b/group/templates/group_display.html
@@ -6,7 +6,15 @@
 
 {% block content %}
 	<div id="group_title">
-		<h2>{{group.title}}</h2>
+			<h2 style="vertical-align: middle;">
+				{{group.title}}
+				
+				{% if can_create_topic %}
+					<span style="float: right;">
+						<a class="a-btn a-btn-m" tabindex="2" href="/group/{{group.key.id}}/new"><span>New Post</span></a>
+					</span>
+				{% endif %}
+			</h2>
 	</div>
 	{% include "topic_list.html" %}
 {% endblock %}
@@ -29,10 +37,6 @@
 			{% endif %}
 			{% if can_quit %}
 				<a class="a-btn a-btn-m" tabindex="2" href="/group/{{group.key.id}}/quit"><span>Quit Group</span></a>
-			{% endif %}
-			</li>
-			{% if can_create_topic %}
-				<a class="a-btn a-btn-m" tabindex="2" href="/group/{{group.key.id}}/new"><span>New Post</span></a>
 			{% endif %}
 			{% if can_edit %}
 				<a class="a-btn a-btn-m" tabindex="2" href="/group/{{group.key.id}}/edit"><span>Group Settings</span></a>
