--- a/group/templates/group_display.html
+++ b/group/templates/group_display.html
@@ -4,6 +4,10 @@
 	Group Info
 {% endblock %}
 
+{% block html_head %}
+	<script type="text/javascript" charset="utf-8" src="/javascript/topic.js"></script>
+{% endblock %}
+
 {% block content %}
 	<div id="group_title">
 			<h2 style="vertical-align: middle;">
@@ -51,7 +55,7 @@
 					<a href="/u/{{member.key.id}}"><img src="{{member.photo_url}}=s48"/></a>
 				</dt>
 				<dd class="name">
-					{{ member.fullname }}
+					<a href="/u/{{member.key.id}}">{{ member.fullname }}</a>
 				</dd>
 			</dl>
 		{% endfor %}
