--- a/group/templates/site_display.html
+++ b/group/templates/site_display.html
@@ -13,8 +13,9 @@
 {% endblock %}
 
 {% block sidebar %}
+	<hr></hr>
 	<div id="my_groups" class="grid_3 alpha dashboard">
-		<h3>My Groups</h3>
+		<h3>You Joined Groups</h3>
 		<p>clear</p>
 	</div>
 	<div id="groups" class="grid_3 omega dashboard">
@@ -25,7 +26,7 @@
 					<a class="group-photo" href="/group/{{group.key.id}}"><img src="{{group.photo_url}}=s32" /></a>
 					<div class="group-title">
 						<a class="group-name" href="/group/{{group.key.id}}">{{ group.title }}</a>
-						<span class="group-info">{{ group.introduction|truncatesmart:2 }}</span>
+						<span class="group-info">{{ group.introduction|truncatesmart:20 }}</span>
 					</div>
 				</li>
 			{% endfor %}
